--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,24 +8,8 @@
 
 </head>
 <th:block layout:fragment="content">
-        <div class="conts">
-            <article class="slide-area">
-                <div class="slide-imgs" >
-                    <img src="image/img1.png" width="33.3%" height="600">
-                    <img src="image/img2.png" width="33.3%" height="600">
-                    <img src="image/img3.png" width="33.3%" height="600">
-                </div>
-            </article>
-            <section class="conts-items">
-                <div class="conts-item1">갤러리</div>
-                <div class="conts-item2">배너</div>
-                <div class="conts-item3">바로가기</div>
-            </section>
-        </div>
-        <footer class="footer">
-            <div class="copyright-area">
-                <span>gasipan footer</span>
-            </div>
-        </footer>
+	<div class="main-content">
+		
+	</div>
 </th:block>
 </html>
