--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,52 +1,32 @@
 *{margin: 0; padding: 0;}
 a{text-decoration:none;}
 
-#wrap {float: left; display: block; width: 100%; height: 100%;}
+#wrap {float: left; display: block; width: 100%; height: 100vh;}
 
 /* mian */
-.conts-header{float: left; width: 100%; height: 150px;}
+.conts-header{position:relative; width: 100%; height: 9.9%; z-index:10; border-bottom: solid 1px #ccc;}
+.conts-header a{color: white;}
 
+/* logo */
 .logo{float: left; width: 15%; height: 100%; text-align: center;}
-.logo-text{font-family: inherit; font-size: 85px;}
+.home-icon{display:block; position:relative; width: 100%; height: 100%;
+background-image: url(/img/home-icon.png); background-repeat: no-repeat; background-position: center; }
 
-.loginYn{float: left; width: 85%; text-align: right; height: 90px; margin-top: 20px;}
-.loginYn-text{margin-right: 10px; font-size: 18px;}
-.join-text{margin-right: 30px; font-size: 18px;}
+/* menu */
+.menu-area{float: left; width: 60%; height: 100%;}
+.menu-group{list-style: none; padding-top: 3%;}
+.menu-area ul li{float: left; width: 200px;}
 
-.menus{float: left; width: 85%; height: 50%;}
-.top-menu{float: left; display: block;}
-.top-menu>li{float: left; display: block; width: 200px; height: 40px; text-align: center; background-color: #eee;}
-.top-menu>li:hover{background-color: #aaa; color: #fff;}
-.top-menu-text{display: block; width: 200px; height: 30px; margin-top: 10px;}
+/* 로그인 회원가입 */
+.loginYn{float: left; width: 15%; height: 100%; text-align: right;}
+.loginYn span{padding-top: 10%;}
+.loginYn-text{display:inline-block; width: 45%; font-size: 18px;}
+.join-text{display:inline-block; width: 45%; font-size: 18px;}
 
-.sub-menu li{position: relative; z-index: 100; float: left; display: none; width: 200px; height: 30px; background-color: #ddd; padding-top: 10px; list-style:none;}
+.main-content{position:relative; top:-10%; width:100%; height:100%;
+background-image: url(/img/main-full-img.png); background-repeat: no-repeat; background-position:center;}
+/* mian 끝 */
 
-.conts{float: left; width: 100%; height: 900px;}
-
-/* 이미지 슬라이드 */
-.slide-area{float: left; width: 100%; height: 600px; overflow: hidden;}
-.slide-imgs{float: left; width: 300%; height: 600px; 
-    position: relative;
-    animation-name: slideAction; /*애니메이션 이름*/
-    animation-delay: 3s; /*애니메이션 몇초 후에 시작할 것인지 지정*/
-    animation-duration: 9s; /*애니메이션 몇초에 걸쳐 실행할 것인지 지정*/
-    animation-timing-function : 3s; /*애니메이션의 각각의 단계를 몇초에 걸쳐 실행할 것인지 지정*/
-    animation-iteration-count : infinite; /*애니메이션 반복횟수 지정*/
-}
-.slide-area img{float: left;}
-
-/* 이미지 슬라이드 keyframe */
-@keyframes slideAction{
-    0%{left:0px;}
-    50%{left: -100%;}
-    100%{left:-200%;}
-}
-
-.conts-items{float: left; width: 100%;}
-
-.conts-item1{float: left; width: 33.3%; height: 300px;}
-.conts-item2{float: left; width: 33.3%; height: 300px;}
-.conts-item3{float: left; width: 33.3%; height: 300px;}
 
 .footer{float: left; display: block; width: 100%; height: 100px; background-color: #eee;}
 .copyright-area{float: left; width: 100%; text-align: center;}
