--- a/src/main/resources/static/css/basic.css
+++ b/src/main/resources/static/css/basic.css
@@ -1,6 +1,9 @@
 @charset "UTF-8";
 
-.conts{border: solid #ccc 1px; float: left; width: 100%;}
+.section{float:left; position: relative; top:-10%; width:100%; height:300px;}
+.img-section{float: left; width:100%; height:400px; background-image: url(/img/section1.png); background-size: 100%;}
+
+.conts{float: left;}
 
 .f-left{float: left;}
 
@@ -35,9 +38,6 @@
 .bgcolor-ccddbb{background-color: #ccddbb;}
 
 .flo-left{float: left;}
-
-.location-guide{float:left; width : 80%; margin-left : 13%; margin-right: 17%; margin-top : 3%; font-size : 14pt;}
-.lg-ul li{float: left; width: 10%; list-style: none; text-align: center;}
 
 .cont-body{float:left; width: 100%;}
 
