--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,10 +1,9 @@
-*{margin: 0; padding: 0;}
 a{text-decoration:none;}
-
-#wrap {float: left; display: block; width: 100%; height: 100vh;}
+body{margin: 0; padding: 0;}
+#wrap{float: left; width:100vw; height: 100vh; overflow-x:hidden;}
 
 /* mian */
-.conts-header{position:relative; width: 100%; height: 9.9%; z-index:10; border-bottom: solid 1px #ccc;}
+.conts-header{float: left; position:relative; width:100%; height: 96px; z-index:10; border-bottom: solid 1px #ccc;}
 .conts-header a{color: white;}
 
 /* logo */
@@ -20,13 +19,13 @@ background-image: url(/img/home-icon.png); background-repeat: no-repeat; backgro
 /* 로그인 회원가입 */
 .loginYn{float: left; width: 15%; height: 100%; text-align: right;}
 .loginYn span{padding-top: 10%;}
-.loginYn-text{display:inline-block; width: 45%; font-size: 18px;}
-.join-text{display:inline-block; width: 45%; font-size: 18px;}
+.loginYn-text{display:inline-block; width: 45%; font-size: 1.3em;}
+.join-text{display:inline-block; width: 45%; font-size: 1.3em;}
 
 .main-content{position:relative; top:-10%; width:100%; height:100%;
 background-image: url(/img/main-full-img.png); background-repeat: no-repeat; background-position:center;}
-/* mian 끝 */
 
 
 .footer{float: left; display: block; width: 100%; height: 100px; background-color: #eee;}
 .copyright-area{float: left; width: 100%; text-align: center;}
+/* mian 끝 */
