--- a/src/main/resources/templates/layout/basic_layout.html
+++ b/src/main/resources/templates/layout/basic_layout.html
@@ -29,6 +29,7 @@ var header = $("meta[name='_csrf_header']").attr("content");
 <body>
 	<div id="wrap">
 		<th:block th:replace="/fragment/header :: header"></th:block>
+		<th:block th:replace="/fragment/section :: section"></th:block>
         <th:block layout:fragment="content"></th:block>
         <th:block th:replace="/fragment/footer :: footer"></th:block>			
 	</div>
