--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,8 +8,6 @@
 
 </head>
 <th:block layout:fragment="content">
-	<div class="main-content">
-		
-	</div>
+	<div class="main-content"><div class="main-img"></div></div>
 </th:block>
 </html>
