--- a/src/main/resources/templates/user/freedom/list.html
+++ b/src/main/resources/templates/user/freedom/list.html
@@ -156,20 +156,22 @@ const viewFunc = function() {
         	<button type="button" class="btn-write mg-rg7 pointer">글쓰기</button>
         </div>
         <div class="pagenation-area">
-        	<ul class="numbers-of-page">
-        		<li class="page-num">◁</li>
-        		<li class="page-num">1</li>
-        		<li class="page-num">2</li>
-        		<li class="page-num">3</li>
-        		<li class="page-num">4</li>
-        		<li class="page-num">5</li>
-        		<li class="page-num">6</li>
-        		<li class="page-num">7</li>
-        		<li class="page-num">8</li>
-        		<li class="page-num">9</li>
-        		<li class="page-num">10</li>
-        		<li class="page-num">▷</li>
-        	</ul>
+        	<div class="pagenation">
+	        	<ul class="numbers-of-page">
+	        		<li class="page-num">◁</li>
+	        		<li class="page-num">1</li>
+	        		<li class="page-num">2</li>
+	        		<li class="page-num">3</li>
+	        		<li class="page-num">4</li>
+	        		<li class="page-num">5</li>
+	        		<li class="page-num">6</li>
+	        		<li class="page-num">7</li>
+	        		<li class="page-num">8</li>
+	        		<li class="page-num">9</li>
+	        		<li class="page-num">10</li>
+	        		<li class="page-num">▷</li>
+	        	</ul>
+        	</div>
         </div> 
     </div>
     
