--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -3,7 +3,7 @@ body{margin: 0; padding: 0;}
 #wrap{float: left; width:100vw; height: 100vh; overflow-x:hidden;}
 
 /* mian */
-.conts-header{float: left; position:relative; width:100%; height: 96px; z-index:10; border-bottom: solid 1px #ccc;}
+.conts-header{float: left; position:relative; width:100%; height:100px; z-index:10; border-bottom: solid 1px #ccc;}
 .conts-header a{color: white;}
 
 /* logo */
@@ -19,12 +19,11 @@ background-image: url(/img/home-icon.png); background-repeat: no-repeat; backgro
 /* 로그인 회원가입 */
 .loginYn{float: left; width: 15%; height: 100%; text-align: right;}
 .loginYn span{padding-top: 10%;}
-.loginYn-text{display:inline-block; width: 45%; font-size: 1.3em;}
+.loginYn-text{display:inline-block; width:45%; font-size: 1.3em;}
 .join-text{display:inline-block; width: 45%; font-size: 1.3em;}
 
-.main-content{position:relative; top:-10%; width:100%; height:100%;
-background-image: url(/img/main-full-img.png); background-repeat: no-repeat; background-position:center;}
-
+.main-content{position:relative; width:100%; height:100%;}
+.main-img{position:relative; width:100%; height:110.288%; top:-100px; background-image: url(/img/main-full-img.png); background-repeat: no-repeat;}
 
 .footer{float: left; display: block; width: 100%; height: 100px; background-color: #eee;}
 .copyright-area{float: left; width: 100%; text-align: center;}
