--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -9,7 +9,8 @@
 	    <div class="menu-area">
     		<ul class="menu-group">
     			<li><a href="">INTRODUCTION</a></li>
-    			<li><a href="/freedom/list">PHOTO ALBUM</a></li>
+    			<li><a href="/">PHOTO ALBUM</a></li>
+    			<li><a href="/freedom/list">자유게시판</a></li>
     		</ul>
     	</div>
         <div class="loginYn">
@@ -19,6 +20,7 @@
             </span>
             <span class="join-text">
             	<a th:if="${session.ssUserId eq null}" th:href="@{/joinView}">회원가입</a>
+            	<a th:unless="${session.ssUserId eq null}" th:href="@{/myPage}">마이페이지</a>
             </span>
         </div>
 	</section>
