--- a/src/main/resources/templates/user/freedom/view.html
+++ b/src/main/resources/templates/user/freedom/view.html
@@ -16,9 +16,6 @@ $(document).ready(function() {
 	setDefault();
 });
 
-const boardType = 02;
-const boardTypeStr = 'freedom';
-
 const initPage = function() {
 
 };
@@ -36,19 +33,6 @@ const registEvent = function() {
 </th:block>
 <th:block layout:fragment="content">
         <div class="conts">
-            <div class="location-guide">
-	            <ul class="lg-ul">
-	                <li>
-	                    <span> HOME </span>
-	                </li>              
-	                <li>
-	                    <span> 자유게시판</span>
-	                </li>
-	                <li>
-	                    <span> 조회 </span>
-	                </li>
-	            </ul>
-            </div>
             <div class="cont-body">
                 <div class="data-area">
                     <table class="data-tbl mg-top2">
@@ -77,7 +61,7 @@ const registEvent = function() {
 	                        	<th colspan="1" class="bgcolor-ccddbb">첨부파일</th>
 	                        	<td colspan="3">
 	                        		<div class="file-group">
-	                        			<span th:unless="${freedom.board.fileName1 eq null}" class="attached-file">
+<!-- 	                        			<span th:unless="${freedom.board.fileName1 eq null}" class="attached-file">
 	                        				<img class="file-icon"  src="/image/file_icon.png">
 	                        				<span class="fileName pointer" th:text="${freedom.board.fileName1}"></span>
 	                        				<input type="hidden" name="fileKey" th:value="${freedom.board.fileKey1}">
@@ -91,7 +75,7 @@ const registEvent = function() {
 	                        				<img class="file-icon"  src="/image/file_icon.png">
 	                        				<span class="fileName pointer" th:text="${freedom.board.fileName3}"></span>
 	                        				<input type="hidden" name="fileKey" th:value="${freedom.board.fileKey3}">
-	                        			</span>
+	                        			</span> -->
 	                        		</div>
 	                        	<td>
 	                        </tr>
