--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,6 @@
 
 </head>
 <th:block layout:fragment="content">
-	<div class="main-content"><div class="main-img"></div></div>
+	<div class="main-content"></div>
 </th:block>
 </html>
