--- a/src/main/resources/static/css/basic.css
+++ b/src/main/resources/static/css/basic.css
@@ -3,7 +3,7 @@
 .section{float:left; position: relative; top:-10%; width:100%; height:300px;}
 .img-section{float: left; width:100%; height:400px; background-image: url(/img/section1.png); background-size: 100%;}
 
-.conts{position:relative; width: 80%; margin: 0 auto;}
+.conts{float:left; width: 100%;}
 
 .f-left{float: left;}
 
@@ -41,19 +41,17 @@
 
 .cont-body{float:left; width: 100%;}
 
-.sch-area{float: left; width: 80%; margin-top: 1%; margin-left: 13%; margin-right: 17%; height : 200px;
-border: solid #ddeecc 3px; border-radius: 5px;}
+.sch-area{position:relative; margin: 1% auto; width: 70%; height : 100px; border: solid #ddeecc 3px; border-radius: 5px;}
 
-.sch-row{float:left; width: 100%; height: 50%; margin-top: 2%;}
+.sch-row{float:left; width: 100%; height: 80px; margin-top: 20px; text-align: center;}
 
-.sch-lab{float: left; margin-right: 1%; font-size: 12pt; padding: 1%; color: #99aa88;}
-.sch-word{float: left; height: 28%; margin: 0.5%; border: solid 1px #99aa88;}
+.sch-lab{position:relative; display:inline-block; width: 60px; font-size: 1.0em; padding: 1%; color: #99aa88;}
+.sch-word{position:relative; display:inline-block; height:30px; border: solid 1px #99aa88;}
 
-.sch-btn-area{float: left; width: 100%; height: 100%;}
-.btn-search{width: 5%; height: 15%; font-size: 12pt; background-color: #ccddbb; border: solid #bbccaa 1px; color: #aabb88;}
-.btn-down{width: 5%; height: 15%; font-size: 12pt; background-color: #ccddbb; border: solid #bbccaa 1px; color: #aabb88;}
+.bgc-green{background-color: #ccddbb; border: solid #bbccaa 1px; color: #aabb88;}
+.btn-search{position:relative; display:inline-block; left:10px; width: 60px; height: 35px; font-size: 1.0em;}
 
-.data-tbl{float: left; width: 80%; margin-left: 13%; margin-right: 17%; border: solid 1px #aabb88;}
+.data-tbl{width: 70%; margin : 1% auto; border: solid 1px #aabb88;}
 .data-tbl-body > tr{width: 100%; height: 40px;}
 
 .data-btn-area{float: left; width: 100%;}
