자유게시판 버튼 css 수정

--- a/src/main/resources/templates/user/freedom/list.html
+++ b/src/main/resources/templates/user/freedom/list.html
@@ -109,7 +109,7 @@ const viewFunc = function() {
 </script>
 </th:block>
 <th:block layout:fragment="content">
-    <div class="conts">
+    <div class="basic-conts">
 		<form name="searchForm">
 	       <input type="hidden" name="boardType" th:value="${parentType}"/>
 	       <input type="hidden" name="boardIdx" value=""/>
@@ -150,7 +150,7 @@ const viewFunc = function() {
             </div>                
         </div>
         <div class="data-btn-area">
-        	<button type="button" class="btn-write mg-rg7 pointer">글쓰기</button>
+			<button type="button" class="btn-write mg-rg15 pointer">글쓰기</button>
         </div>
         <div class="pagenation-area">
         	<div class="pagenation">
