--- a/src/main/resources/templates/user/freedom/view.html
+++ b/src/main/resources/templates/user/freedom/view.html
@@ -79,8 +79,8 @@ const registEvent = function() {
                     </table>
                 </div>
             </div>
-            <div class="data-btn-area mg-top2">
-            	<button type="button" class="btn-list mg-rg7 pointer">목록</button>
+            <div class="data-btn-area mg-top2 mg-bottom2">
+            	<button type="button" class="btn-list mg-rg15 pointer">목록</button>
             </div>
         </div>
 </th:block>
