--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,4 +1,5 @@
-*{margin:0 auto; padding:0;}
+*{margin:0; padding:0;}
+body{overflow-x: hidden;}
 #wrap{width:1920px; height:100vh;}
 
 a{text-decoration:none;}
@@ -27,6 +28,6 @@ background-image: url(/img/home-icon.png); background-repeat: no-repeat; backgro
 
 .main-content{float:left; width:100%; height:800px;}
 
-.footer{float: left; width: 100%; height:68px; background-color: #eee;}
+.footer{float: left; width: 100%; height:100px; background-color: #eee;}
 .copyright-area{float: left; width: 100%; text-align: center;}
 /* mian 끝 */
