--- a/src/main/resources/templates/user/photoAlbum/list.html
+++ b/src/main/resources/templates/user/photoAlbum/list.html
@@ -34,26 +34,135 @@ const registEvent = function() {
 		<form name="searchForm">
 	       <input type="hidden" name="pageNo"/>
 	       <input type="hidden" name="pageBlock"/>		
-		</form>
+		</form>		
         <div class="cont-body">
-        	<table>
-        		<tbody>
+			<div class="sch-area">
+				<div class="sch-row">
+			      <label class="sch-lab">제목</label>
+			      <input type="text" class="sch-word" name="title" value="">
+			      <label class="sch-lab">작성자</label>
+			      <input type="text" class="sch-word" name="writer" value="">
+			      <button type="button" class="btn-search bgc-green">검색</button>
+			    </div>
+			</div>
+        	<table class="photo-list-tbl">
+        		<tbody class="photo-tbl-bd">
         			<tr>
-        				<td>
-        					<img src="/attached_file/freedom/F74C1FC1-569D-4586-AD78-416E8F1A3D28.jpg">
+        				<td class="photo-frame">
+        					<div class="photo-img">
+        						<img src="/attached_file/freedom/F74C1FC1-569D-4586-AD78-416E8F1A3D28.jpg">
+        					</div>
+        					<div class="photo-description">
+	        					<span>대충고양이는귀엽다</span>
+	        					<span>작성자 : 김고양</span> 
+	        					<span>등록일 : 2022-07-04</span>
+	        					<span>조회수 : 0</span>        					
+        					</div>
         				</td>
-        				<td>
-        					<span>대충고양이는귀엽다</span>
-        					<span>작성자 : 김고양</span> 
-        					<span>등록일 : </span>
-        					<span>조회수 :</span>
+        				<td class="photo-frame">
+        					<div class="photo-img">
+        						<img src="/attached_file/freedom/F74C1FC1-569D-4586-AD78-416E8F1A3D28.jpg">
+        					</div>
+        					<div class="photo-description">
+	        					<span>대충고양이는귀엽다</span>
+	        					<span>작성자 : 김고양</span> 
+	        					<span>등록일 : 2022-07-04</span>
+	        					<span>조회수 : 0</span>        					
+        					</div>
         				</td>
+        				<td class="photo-frame">
+        					<div class="photo-img">
+        						<img src="/attached_file/freedom/F74C1FC1-569D-4586-AD78-416E8F1A3D28.jpg">
+        					</div>
+        					<div class="photo-description">
+	        					<span>대충고양이는귀엽다</span>
+	        					<span>작성자 : 김고양</span> 
+	        					<span>등록일 : 2022-07-04</span>
+	        					<span>조회수 : 0</span>        					
+        					</div>
+        				</td>        				
+        				<td class="photo-frame">
+        					<div class="photo-img">
+        						<img src="/attached_file/freedom/F74C1FC1-569D-4586-AD78-416E8F1A3D28.jpg">
+        					</div>
+        					<div class="photo-description">
+	        					<span>대충고양이는귀엽다</span>
+	        					<span>작성자 : 김고양</span> 
+	        					<span>등록일 : 2022-07-04</span>
+	        					<span>조회수 : 0</span>        					
+        					</div>
+        				</td>        				
+        				<td class="photo-frame">
+        					<div class="photo-img">
+        						<img src="/attached_file/freedom/F74C1FC1-569D-4586-AD78-416E8F1A3D28.jpg">
+        					</div>
+        					<div class="photo-description">
+	        					<span>대충고양이는귀엽다</span>
+	        					<span>작성자 : 김고양</span> 
+	        					<span>등록일 : 2022-07-04</span>
+	        					<span>조회수 : 0</span>        					
+        					</div>
+        				</td>        				
+        			</tr>
+        			<tr>
+        				<td class="photo-frame">
+        					<div class="photo-img">
+        						<img src="/attached_file/freedom/F74C1FC1-569D-4586-AD78-416E8F1A3D28.jpg">
+        					</div>
+        					<div class="photo-description">
+	        					<span>대충고양이는귀엽다</span>
+	        					<span>작성자 : 김고양</span> 
+	        					<span>등록일 : 2022-07-04</span>
+	        					<span>조회수 : 0</span>        					
+        					</div>
+        				</td>
+        				<td class="photo-frame">
+        					<div class="photo-img">
+        						<img src="/attached_file/freedom/F74C1FC1-569D-4586-AD78-416E8F1A3D28.jpg">
+        					</div>
+        					<div class="photo-description">
+	        					<span>대충고양이는귀엽다</span>
+	        					<span>작성자 : 김고양</span> 
+	        					<span>등록일 : 2022-07-04</span>
+	        					<span>조회수 : 0</span>        					
+        					</div>
+        				</td>
+        				<td class="photo-frame">
+        					<div class="photo-img">
+        						<img src="/attached_file/freedom/F74C1FC1-569D-4586-AD78-416E8F1A3D28.jpg">
+        					</div>
+        					<div class="photo-description">
+	        					<span>대충고양이는귀엽다</span>
+	        					<span>작성자 : 김고양</span> 
+	        					<span>등록일 : 2022-07-04</span>
+	        					<span>조회수 : 0</span>        					
+        					</div>
+        				</td>        				
+        				<td class="photo-frame">
+        					<div class="photo-img">
+        						<img src="/attached_file/freedom/F74C1FC1-569D-4586-AD78-416E8F1A3D28.jpg">
+        					</div>
+        					<div class="photo-description">
+	        					<span>대충고양이는귀엽다</span>
+	        					<span>작성자 : 김고양</span> 
+	        					<span>등록일 : 2022-07-04</span>
+	        					<span>조회수 : 0</span>        					
+        					</div>
+        				</td>
+        				<td class="photo-frame">
+        					<div class="photo-frame">
+        						<img src="/attached_file/freedom/F74C1FC1-569D-4586-AD78-416E8F1A3D28.jpg">
+        					</div>
+        					<div class="photo-description">
+	        					<span>대충고양이는귀엽다</span>
+	        					<span>작성자 : 김고양</span> 
+	        					<span>등록일 : 2022-07-04</span>
+	        					<span>조회수 : 0</span>        					
+        					</div>
+        				</td>        				
         			</tr>
         		</tbody>
-        	</table>
-        </div>
-        <div class="data-btn-area">
-        
+        	</table>        	
         </div>
         <div class="pagenation-area">
         	<div class="pagenation">
