--- a/src/main/resources/templates/layout/basic_layout.html
+++ b/src/main/resources/templates/layout/basic_layout.html
@@ -28,8 +28,10 @@ var header = $("meta[name='_csrf_header']").attr("content");
 <th:block layout:fragment="script"></th:block>
 <body>
 	<div id="wrap">
-		<th:block th:replace="/fragment/header :: header"></th:block>
-		<th:block th:replace="/fragment/section :: section"></th:block>
+		<div class="basic-top">
+			<th:block th:replace="/fragment/header :: header"></th:block>
+			<th:block th:replace="/fragment/section :: section"></th:block>		
+		</div>
         <th:block layout:fragment="content"></th:block>
         <th:block th:replace="/fragment/footer :: footer"></th:block>			
 	</div>
