--- a/src/main/resources/templates/admin/fragment/admin_menu.html
+++ b/src/main/resources/templates/admin/fragment/admin_menu.html
@@ -1,47 +1,18 @@
 <div class="menu-group">
     <ul class="menu-list">
-        <li class="menu-elemt">메뉴1
+        <li class="menu-elemt">회원관리
         	<ul class="sub-menu-lst dn">
-        		<li><a href="/admin/freedom/list">자유게시판</a></li>
-        		<li>서브메뉴2</li>
-        		<li>서브메뉴3</li>
-        		<li>서브메뉴4</li>
+        		<li><a href="/admin/freedom/list">회원관리</a></li>
+        		<li><a href="/admin/">탈퇴회원</a></li>
         	</ul>
-        </li>
-        <li class="menu-elemt">메뉴2
-        	<ul class="sub-menu-lst dn">
-        		<li>서브메뉴1</li>
-        		<li>서브메뉴2</li>
-        		<li>서브메뉴3</li>
-        		<li>서브메뉴4</li>
-        	</ul>        
         </li>
     </ul>
     <ul class="menu-list">
-        <li class="menu-elemt">메뉴3
+        <li class="menu-elemt">게시판관리
         	<ul class="sub-menu-lst dn">
-        		<li>서브메뉴1</li>
-        		<li>서브메뉴2</li>
-        		<li>서브메뉴3</li>
-        		<li>서브메뉴4</li>
-        	</ul>        
-        </li>
-    </ul>
-    <ul class="menu-list">
-        <li class="menu-elemt">메뉴4
-        	<ul class="sub-menu-lst dn">
-        		<li>서브메뉴1</li>
-        		<li>서브메뉴2</li>
-        		<li>서브메뉴3</li>
-        		<li>서브메뉴4</li>
-        	</ul>
-        </li>
-        <li class="menu-elemt">메뉴5
-        	<ul class="sub-menu-lst dn">
-        		<li>서브메뉴1</li>
-        		<li>서브메뉴2</li>
-        		<li>서브메뉴3</li>
-        		<li>서브메뉴4</li>
+        		<li><a href="/admin/">PHOTO ALBUM</a></li>
+        		<li><a href="/admin/">자유게시판</a></li>
+        		<li><a href="/admin/">공지사항</a></li>
         	</ul>        
         </li>
     </ul>                                
