--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -1,52 +1,37 @@
-*{margin: 0; padding: 0;}
+*{margin:0; padding:0;}
+a{text-decoration:none;}
+body{overflow-x: hidden;}
 
-#wrap {float: left; display: block; width: 100%; height: 900px;}
+#wrap{width:1920px; height:100vh;}
+
+
 
 /* common */
 
 .dn{display:none;}
 
 /* header */
-.admin-header{float: left; width: 100%; height: 20%;}
+.admin-header{float: left; width: 100%; height: 10%;}
 
 .logo-area{float:left; width: 10%; height: 100%;}
-.logo{display: block; font-size: 40pt; text-align: center; padding: 20%;}
+.logo{display: block; font-size: 40pt; text-align: center;}
 
 .profile{float: right; width: 6%; height: 100%; margin-top: 1%;}
 .prof-logut{float: left; width: 100%; height: 100%;}
-.prof-img{float: left;}
-.prof-link{
-    float: left; width: 70%; margin-top: 5%; margin-left: 2%; 
-    text-decoration: none; text-align: center; color: black;}
+.prof-link{float: left; width: 70%; margin-top: 5%; margin-left: 2%; text-decoration: none; text-align: center; color: black;}
 .prof-login{float: left; width: 100%; height: 100%; display: none;}
 
 
 /* contents */
-.conts{float: left; width: 100%; height: 80%;}
+.conts{float: left; width: 100%; height: 90%;}
 
 /* side menu */
-.menu-group{
-    float: left; width: 10%; height: 100%;
-    background-color: #efefefef;}
+.menu-group{float: left; width: 10%; height: 100%; background-color: #efefefef;}
+.menu-list{float: left; width: 100%; font-size: 14pt; text-align: center;}
+.menu-list li {padding: 5px;}
 
-.menu-list{
-    float: left;
-    width: 100%;
-    font-size: 14pt;
-    text-align: center;
-}
-.menu-list li {
-    padding: 5px;
-}
+.sub-menu-lst{font-size: 12pt;background-color: #dddddddd;}
 
-.sub-menu-lst{
-	font-size: 12pt;
-	background-color: #dddddddd;
-}
-
-
-.cont-body{
-    float: left; width: 90%; height: 100%;
-}
+.cont-body{float: left; width: 90%; height: 100%;}
 
 
